# canvas_todo

./: .gitignore  README.md  canvas_summary\old_assignments.json  pyproject.toml
canvas_summary/: config.json  main.py  main.pyw  simplecanvasuser.py  testjson.py  todoist.py
tests/: test_canvas_summary.py
