[tool.poetry]
name = "canvas_summary"
version = "0.1.0"
description = ""
authors = ["Tomi Adenekan <tominekan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
canvasapi = "^3.0.0"
todoist-api-python = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
